<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layoutDirection="ltr"
    android:theme="@style/AppTheme">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="تغییر رمز"
        app:titleTextColor="#ffffffff" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_last_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="20.0dip"
        android:layout_marginEnd="20.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar4"
        app:layout_constraintVertical_bias="0.2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_last_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/far_khodkar"
            android:hint="@string/key_last_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_new_password1_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edt_last_password_layout"
        app:layout_constraintStart_toStartOf="@id/edt_last_password_layout"
        app:layout_constraintTop_toBottomOf="@id/edt_last_password_layout"
        app:layout_constraintVertical_bias="0.14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_new_password1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="11"
            android:fontFamily="@font/far_khodkar"
            android:hint="@string/key_new_password1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_new_password2_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edt_new_password1_layout"
        app:layout_constraintStart_toStartOf="@id/edt_new_password1_layout"
        app:layout_constraintTop_toBottomOf="@id/edt_new_password1_layout"
        app:layout_constraintVertical_bias="0.2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_new_password2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="11"
            android:fontFamily="@font/far_khodkar"
            android:hint="@string/key_new_password2"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        android:rotation="180.0"
        app:layout_constraintBottom_toBottomOf="@id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/toolbar4"
        app:layout_constraintTop_toTopOf="@id/toolbar4"
        app:srcCompat="@drawable/ic_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_new_password"
        android:layout_width="0.0dip"
        android:layout_height="60.0dip"
        android:layout_marginStart="50.0dip"
        android:layout_marginEnd="50.0dip"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/far_khodkar"
        android:text="@string/key_set_new_password"
        android:textColor="#ffffffff"
        android:textSize="18.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edt_new_password2_layout"
        app:layout_constraintStart_toStartOf="@id/edt_new_password2_layout"
        app:layout_constraintTop_toBottomOf="@id/edt_new_password2_layout"
        app:layout_constraintVertical_bias="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>